--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -1,2 +1,4 @@
 <h1>hello</h1>
 <%= link_to "Privacy Policy", static_pages_privacy_policy_path %>
+
+<button type="button" class="btn btn-primary">Primary</button>
