add font awesome

--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -2,3 +2,5 @@
 <%= link_to "Privacy Policy", static_pages_privacy_policy_path %>
 
 <button type="button" class="btn btn-primary">Primary</button>
+
+<i class="fas fa-adjust"></i>
