add course crud

--- a/app/views/static_pages/landing_page.html.haml
+++ b/app/views/static_pages/landing_page.html.haml
@@ -2,3 +2,7 @@
 = link_to "Privacy Policy", static_pages_privacy_policy_path
 %button.btn.btn-primary{:type => "button"} Primary
 %i.fas.fa-adjust
+
+= link_to courses_path, class: 'btn btn-success' do
+  .fa.fa-book
+  Course
