--- a/app/views/courses/index.html.haml
+++ b/app/views/courses/index.html.haml
@@ -7,6 +7,7 @@
     %tr
       %th Title
       %th Description
+      %th user
       %th
       %th
       %th
@@ -14,8 +15,9 @@
   %tbody
     - @courses.each do |course|
       %tr
-        %td= course.title
+        %td= course
         %td= course.description
+        %td= course.user
         %td= link_to 'Show', course
         %td= link_to 'Edit', edit_course_path(course)
         %td= link_to 'Destroy', course, method: :delete, data: { confirm: 'Are you sure?' }
